# newcloudo2o

./: README.md  setup.cfg
etc/: vcenter_api.conf
newcloudo2o/api/: app.py  opts.py
newcloudo2o/api/controllers/: pod.py  root.py
newcloudo2o/common/: az_ag.py  baserpc.py  client.py  config.py  context.py  exceptions.py  httpclient.py  i18n.py  lock_handle.py  opts.py  quota.py  resource_handle.py  restapp.py  rpc.py  utils.py  version.py  xrpcapi.py
newcloudo2o/db/: api.py  core.py  migration_helpers.py  models.py  opts.py
newcloudo2o/db/migrate_repo/: migrate.cfg
newcloudo2o/vcenter_api/: app.py  opts.py
newcloudo2o/vcenter_api/controllers/: datacenter.py  datastore.py  esxi.py  network.py  root.py  root_versions.py  server.py  server_action.py  vm.py
