[metadata]
name = newcloudo2o
summary = The newcloudo2o provides an vCenter API gateway to allow vCenter instances to be managed as an OpenStack cloud.
description-file = README.rst
author = lixx
author-email = lixx@vsettan.com.cn
home-page = https://github.com/lilingxing20/newcloudo2o
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    newcloudo2o

[entry_points]
oslo.config.opts =

    newcloudo2o.api = newcloudo2o.api.opts:list_opts
    newcloudo2o.common = newcloudo2o.common.opts:list_opts
    newcloudo2o.db = newcloudo2o.db.opts:list_opts

    newcloudo2o.vcenter_api = newcloudo2o.vcenter_api.opts:list_opts

